`feat(shop):` add owner to shop
